<resources>
    <string name="app_name">Movie Database</string>

    <string name="hint_search">Search for movies,tv series or actors</string>
    <string name="api_key">d9695f4d017fcc9799ede07d46dd40c7</string>
    <string name="token_session">cf1bacd1887cb574dfcefa421ea256d93cd549b5</string>

    <string name="session_id">3576a3430a24521a5a5600fbe22ee4eb7a57721f</string>

    <string name="base_url">https://api.themoviedb.org/3/</string>
    <string name="search">Search</string>

    <string name="home_activity">Home</string>
    <string name="lists_activity">Lists</string>
    <string name="favs_activity">Favs</string>
    <string name="account_activity">Account</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_lists">User lists</string>
    <string name="title_activity_favs">Favorites</string>
    <string name="title_activity_account">Account</string>

    <string name="title_activity_movie_details">Movie details</string>
    <string name="title_activity_tv_details">Tv serie details</string>
    <string name="title_activity_actor_details">Actor details</string>

    <string name="title_activity_search_results">Search results</string>


    <string name="section_popular_movies_home">Popular Movies</string>
    <string name="section_popular_tv_series_home">Popular TV Shows</string>
    <string name="section_popular_actors_home">Popular Actors</string>

    <string name="blank_space"> </string>
    <string name="iv_content_description_details">Movie poster</string>

    <string name="movies">Movies</string>
    <string name="tvseries">TvSeries</string>

    <string name="birth_date">Birth date: </string>
    <string name="death_day">Death day: </string>
    <string name="place_of_birth">Place of birth: </string>
    <string name="also_known_for">Also known for:</string>
    <string name="biography">Biography</string>
    <string name="other_images">Images</string>
    <string name="similar_recomm">Similar </string>

    <string name="add_to_list_default_message">Add to list: </string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">CANCEL</string>
    <string name="title_add_to_a_list">Add to a list:</string>

</resources>
